bug 200591, "File Options > Don't Debug Eval/Timeouts isn't working", r=brendan prevent any stack with a disabled frame from being debugged during single-stepping, or break-on-throw.  Also adds versioning support to the jsdIDebuggerService interface.